[gd_scene load_steps=7 format=3 uid="uid://cmreufjgwic8r"]

[ext_resource type="Script" path="res://Scripts/Objects/Bullet.gd" id="1_ojgy6"]
[ext_resource type="Texture2D" uid="uid://b8mlglg3y1ll4" path="res://Assets/Projectile/chip.png" id="3_ntaiq"]
[ext_resource type="PackedScene" uid="uid://cb31fy1jk1p2a" path="res://Scripts/Particles/Explosion.tscn" id="3_whs7m"]
[ext_resource type="AudioStream" uid="uid://cu3wk1r03umek" path="res://Assets/NinjaAdventure/Sounds/Game/Hit.wav" id="4_p1hwm"]
[ext_resource type="AudioStream" uid="uid://d0w60jisku0vp" path="res://Assets/NinjaAdventure/Sounds/Game/MiniImpact.wav" id="5_oppo5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eukq3"]
radius = 4.12311

[node name="Bullet" type="Area2D"]
collision_layer = 2
collision_mask = 116
script = ExtResource("1_ojgy6")
explosion_scene = ExtResource("3_whs7m")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_ntaiq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_eukq3")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Explosion" parent="." instance=ExtResource("3_whs7m")]
scale_amount_max = 0.3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p1hwm")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_oppo5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
